@@ -38,6 +38,7 @@
 .Nm ATF_REQUIRE ,
 .Nm ATF_REQUIRE_EQ ,
 .Nm ATF_REQUIRE_ERRNO ,
+.Nm ATF_REQUIRE_MATCH ,
 .Nm ATF_REQUIRE_THROW ,
 .Nm ATF_REQUIRE_THROW_RE ,
 .Nm ATF_SKIP ,
@@ -58,6 +59,7 @@
 .Fn ATF_REQUIRE "expression"
 .Fn ATF_REQUIRE_EQ "expression_1" "expression_2"
 .Fn ATF_REQUIRE_ERRNO "exp_errno" "bool_expression"
+.Fn ATF_REQUIRE_MATCH "regexp" "string_expression"
 .Fn ATF_REQUIRE_THROW "expected_exception" "statement"
 .Fn ATF_REQUIRE_THROW_RE "expected_exception" "regexp" "statement"
 .Fn ATF_SKIP "reason"
@@ -310,6 +312,10 @@ takes an expression and raises a failure if it evaluates to false.
 .Fn ATF_REQUIRE_EQ
 takes two expressions and raises a failure if the two do not evaluate to
 the same exact value.
+.Pp
+.Fn ATF_REQUIRE_MATCH
+takes a regular expression and a string and raises a failure if the regular
+expression does not match the string.
 .Pp
 .Fn ATF_REQUIRE_THROW
 takes the name of an exception and a statement and raises a failure if
